--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "heroku": "^7.60.1",
     "http-errors": "~1.6.3",
     "morgan": "~1.9.1",
-    "nodemon": "^2.0.15"
+    "nodemon": "^2.0.15",
+    "pg": "^8.7.3"
   }
 }
